tests/macros/duplicate/name.stderr
error: duplicate option `name`
 --> $DIR/name.rs:4:9
  |
4 |         name: todo!(),
  |         ^^^^
