tests/macros/duplicate/name.rs
fn main() {
    let q = inquisition::questions![input {
        name: todo!(),
        name: todo!(),
    }];
}
